# django-simple-accounts

./: Makefile  README.md  pyproject.toml
accounts/: adapter.py  admin.py  forms.py  settings.py  signals.py  urls.py  views.py
accounts/locale/vi/LC_MESSAGES/: django.po
accounts/templates/accounts/: base_site.html  home.html  logged_out.html  login_form.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile_form.html
accounts/templates/accounts/includes/: fieldset.html
accounts/templatetags/: form_tags.py
testproject/: create_user.py  manage.py  settings.py  urls.py
