[tool.poetry]
name = "django-simple-accounts"
version = "0.1.3"
description = "Django accounts site"
authors = ["kai <thuan.dv0@gmail.com>"]
repository = "https://github.com/ThuanD/django-simple-accounts"
readme = "README.md"
include = ["accounts/locale/**/*.mo"]
packages = [
    { include = "accounts" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
